--- a/src/css/timer.css
+++ b/src/css/timer.css
@@ -1,12 +1,21 @@
 .timer {
   display: flex;
   gap: 10px;
+  font-family: "Lato";
+  font-weight: 10px;
+  padding: 30px;
 }
 
 .field {
   display: flex;
   flex-direction: column;
   align-items: center;
+  /* background: #ab0; */
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 20px;
+  border-radius: 15;
+  min-width: 80px;
 }
 
 .value {
